--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 # Project exclude paths
 /venv/
+jba-python-problems.iml
+misc.xml
+modules.xml
+profiles_settings.xml
+Project_Default.xml
+vcs.xml
